infrastructure/config/policies/mutate/ingress-cloudflare-tunnel-dns.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-cloudflare
spec:
  rules:
    - name: force-dns-tunnel-cname
      match:
        any:
          - resources:
              kinds:
                - Ingress
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): "${CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"
